tests/suite/manifests/upstream-settings-policy/invalid-svc-usps.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: does-not-exist
spec:
  zoneSize: 512k
  targetRefs:
  - group: core
    kind: Service
    name: latte
  keepAlive:
    connections: 10
    requests: 3
    time: 10s
    timeout: 50s
