tests/suite/manifests/upstream-settings-policy/invalid-target-usps.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-not-valid
spec:
  gatewayClassName: nginx
  addresses:
    - value: "10.0.0.1"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "soda.example.com"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soda
  template:
    metadata:
      labels:
        app: soda
    spec:
      containers:
        - name: soda
          image: nginxdemos/nginx-hello:plain-text
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: soda
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: soda
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soda
spec:
  parentRefs:
    - name: gateway-not-valid
      sectionName: http
  hostnames:
    - "soda.example.com"
  rules:
    - matches:
        - path:
            type: Exact
            value: /soda
      backendRefs:
        - name: soda
          port: 80
---
apiVersion: gateway.nginx.org/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: soda-svc-usp
spec:
  zoneSize: 512k
  targetRefs:
    - group: core
      kind: Service
      name: soda
  keepAlive:
    connections: 10
    requests: 3
    time: 10s
    timeout: 50s
