tests/suite/manifests/upstream-settings-policy/use-cluster-ip-conflict-usp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: cluster-ip-conflict-usp
spec:
  targetRefs:
    - group: core
      kind: Service
      name: coffee
  useClusterIP: false
